# search-engine

./: .gitignore  LICENSE  Pipfile  basic.py  scrape.py
advanced/: Cargo.toml
advanced/benches/: simple.rs  stemmers.rs  stop_words.rs
advanced/src/tokenizer/: stop_words.rs  tokenizer.rs
basic/: Pipfile  algorithm.md  basic.py  timing.py
data/docs/simple/: INCH BY INCH.txt
docs/: JUST DO IT.txt  THE PURSUIT OF HAPPYNESS.txt
scripts/: scrape.py
