[package]
name = "advanced"
version = "0.1.0"
authors = ["Halvor Bø <halvor@complex.codes>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
patricia_tree = "*"
rust-stemmers = "^1.0"
regex = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "stop_words"
harness = false

[[bench]]
name = "stemmers"
harness = false